--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
         <div class="flex gap-2">
           <button id="btnAgregarStock" class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded">Agregar</button>
-          <button id="btnVaciarStock" class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded">Vaciar stock (debug)</button>
+          <button id="btnVaciarStock" class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded">Vaciar stock</button>
         </div>
       </div>
 
@@ -757,3 +757,4 @@ btnStock.addEventListener("click", () => {
   </script>
 </body>
 </html>
+
