--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <title>Gestor de Pedidos</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
+
+  
  
 
 </head>
@@ -757,4 +762,5 @@ btnStock.addEventListener("click", () => {
   </script>
 </body>
 </html>
+
 
